2010-02-10  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Replaced AC_GNU_SOURCE with AC_USE_SYSTEM_EXTENSIONS
	  per autoupdate.

	* : Re-bootstrap'd with autoconf-2.65, automake-1.11.1, libtool 2.2.6b.

	* : Updated copyright date range.

2009-09-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Applied patch from Petter Reinholdtsen
	  <pere@hungry.com> to correct LSB run-time dependencies
	  <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=541238>.
	  Note that LSB runlevels were removed by an earlier change to
	  prevent the daemon from being started by default on Fedora/RedHat.

2009-08-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c: Re-ordered functions.

2009-08-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Tweaked comments.

	* src/libcommon/log.c: Added initializer for log_ctx.id.

	* src/libcommon/log.c (_log_aux): Replaced timestamp code w/ strftimet.

	* src/libcommon/str.c (strftimet): Added.
	* src/libcommon/str.h: Added strftimet() prototype.  Tweaked comments.

2009-07-30  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Added comment describing latest attack
	  against 11-round AES-256 in 2^70 time.

2009-07-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munge/unmunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Renamed opt_string to short_opts, opt_table to long_opts.

	* src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munge/unmunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Added case for missing option argument.

2009-06-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/enum.c (munge_enum_str_to_int),
	  src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Added additional checks for strtol() & strtoul().

2009-05-04  Chris Dunlap  <cdunlap@llnl.gov>
